# Django_quotes

./: README.md  pyproject.toml
project_quotes/project_quotes/: asgi.py  settings.py  urls.py  wsgi.py
project_quotes/quotes/: admin.py  forms.py  models.py  save_to_db.py  urls.py  views.py
project_quotes/quotes/migrations/: 0001_initial.py  0002_author_born_date_author_born_location_and_more.py  0003_alter_author_born_location.py  0004_alter_author_fullname.py  0005_alter_tag_name.py  0006_author_user_quote_user_tag_user_tag_tag_of_username.py
project_quotes/quotes/static/quotes/: style.css
project_quotes/quotes/templates/quotes/: author.html  author_detail.html  base.html  index.html  tag.html
project_quotes/quotes/utils/: authors.json  quotes.json  scrape.py
project_quotes/users/: forms.py  urls.py  views.py
project_quotes/users/templates/users/: login.html  signup.html
